cmake_minimum_required(VERSION 2.8)
project(StudyOpenGL)
set(CMAKE_CXX_STANDARD 11)
IF(APPLE)
    #INCLUDE_DIRECTORIES ( /System/Library/Frameworks )
    FIND_LIBRARY(COCOA_LIBRARY Cocoa)
    FIND_LIBRARY(GLUT_LIBRARY GLUT )
    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
    FIND_LIBRARY(GLEW_LIBRARY OpenGL )
    FIND_PACKAGE(GLFW3 REQUIRED)
    MARK_AS_ADVANCED (COCOA_LIBRARY GLUT_LIBRARY OpenGL_LIBRARY GLEW_LIBRARY)
    #include_directories(${GLFW3_INCLUDE_DIRS})
    include_directories(/usr/local/Cellar/glfw/3.2.1/include)
    link_directories(/usr/local/Cellar/glfw/3.2.1/lib)
    SET(EXTRA_LIBS ${COCOA_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} glfw)
ENDIF (APPLE)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    FIND_PACKAGE(GLUT REQUIRED)
    FIND_PACKAGE(GLU REQUIRED)
    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
    FIND_LIBRARY(GLEW_LIBRARY OpenGL )
    FIND_PACKAGE(GLFW3 REQUIRED)
    include_directories(${GLFW3_INCLUDE_DIRS})
    SET(EXTRA_LIBS ${GLU_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} ${GLFW3_LIBRARIES} m)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")

file(GLOB PROJECT_SRCS ./common/*.cpp)
include_directories(./common/)

#find_package(OpenGL REQUIRED)
#find_package(GLUT REQUIRED)
#find_library(COCOA_LIB cocoa)
#include_directories( ${OPENGL_INCLUDE_DIR}  ${GLUT_INCLUDE_DIR})
add_definitions(-DGL_SILENCE_DEPRECATION)
add_subdirectory(./01_triangle)
add_subdirectory(./02_circle)
add_subdirectory(./03_star)
add_subdirectory(./04_sin_cos)
add_subdirectory(./05_polygon)
add_subdirectory(./06_vertex_color)
add_subdirectory(./07_model_view)
add_subdirectory(./08_solar_system)
add_subdirectory(./09_blend)
add_subdirectory(./10_lighting_model)
add_subdirectory(./11_texture)
add_subdirectory(./12_world_map)
add_subdirectory(./13_programing_pipeline)
