cmake_minimum_required(VERSION 2.8)
project(StudyOpenGL)
set(CMAKE_CXX_STANDARD 11)
add_definitions(-g)
IF(APPLE)
    find_package(PkgConfig REQUIRED)
    FIND_LIBRARY(GLUT_LIBRARY GLUT )
    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
    pkg_search_module(GLFW REQUIRED glfw3)
    pkg_search_module(GLEW REQUIRED glew)
    include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
    link_directories(${GLFW_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS})
    SET(EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLFW_LIBRARIES} ${GLEW_LIBRARIES})
ENDIF (APPLE)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    find_package(PkgConfig REQUIRED)
    FIND_PACKAGE(GLUT REQUIRED)
    pkg_search_module(GLFW REQUIRED glfw3)
    pkg_search_module(GLU REQUIRED glu)
    pkg_search_module(OPENGL REQUIRED gl)
    include_directories(${GLFW3_INCLUDE_DIRS})
    SET(EXTRA_LIBS ${GLU_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES} m)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")

file(GLOB PROJECT_SRCS ./common/*.cpp)
include_directories(./common/)

add_definitions(-DGL_SILENCE_DEPRECATION)
add_subdirectory(./01_triangle)
add_subdirectory(./02_circle)
add_subdirectory(./03_star)
add_subdirectory(./04_sin_cos)
add_subdirectory(./05_polygon)
add_subdirectory(./06_vertex_color)
add_subdirectory(./07_model_view)
add_subdirectory(./08_solar_system)
add_subdirectory(./09_blend)
add_subdirectory(./10_lighting_model)
add_subdirectory(./11_texture)
add_subdirectory(./12_world_map)
add_subdirectory(./13_programing_pipeline)
add_subdirectory(./14_glsl_vertex_color)
add_subdirectory(./15_glsl_texture)
add_subdirectory(./16_glsl_vao)
