cmake_minimum_required(VERSION 3.2)
project(StudyOpenGL)
set(CMAKE_CXX_STANDARD 11)
add_definitions(-g)

find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
pkg_search_module(GLEW REQUIRED glew)
pkg_search_module(MINIZIP REQUIRED minizip)
include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
link_directories(${GLFW_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS} ${MINIZIP_LIBRARY_DIRS})
SET(EXTRA_LIBS ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} assimp)

IF(APPLE)
set(CMAKE_MACOSX_RPATH 1)
ENDIF (APPLE)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

include_directories(./3rdparty/assimp/include)
include_directories(./3rdparty/stb)
include_directories(./3rdparty/glm)

IF(APPLE)
    FIND_LIBRARY(GLUT_LIBRARY GLUT )
    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
    SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLUT_LIBRARY} ${OpenGL_LIBRARY})
ENDIF (APPLE)

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    FIND_PACKAGE(GLUT REQUIRED)
    pkg_search_module(GLU REQUIRED glu)
    pkg_search_module(OPENGL REQUIRED gl)
    SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLU_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} m)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")

file(GLOB PROJECT_SRCS ./common/*.cpp)
include_directories(./common/)

add_subdirectory(./3rdparty/assimp)

add_definitions(-DGL_SILENCE_DEPRECATION -DSTB_IMAGE_IMPLEMENTATION)
add_subdirectory(./01_triangle)
add_subdirectory(./02_circle)
add_subdirectory(./03_star)
add_subdirectory(./04_sin_cos)
add_subdirectory(./05_polygon)
add_subdirectory(./06_vertex_color)
add_subdirectory(./07_model_view)
add_subdirectory(./08_solar_system)
add_subdirectory(./09_blend)
add_subdirectory(./10_lighting_model)
add_subdirectory(./11_texture)
add_subdirectory(./12_world_map)
add_subdirectory(./13_programing_pipeline)
add_subdirectory(./14_glsl_vertex_color)
add_subdirectory(./15_glsl_texture)
add_subdirectory(./16_glsl_vao)
add_subdirectory(./17_glsl_ebo)
add_subdirectory(./18_glsl_ebo_uv)
add_subdirectory(./19_fbx_cube)
